--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,7 @@
 			href="https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
 
 		%sveltekit.head%
 	</head>
