--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Unscrabbled, dictionary for word games" />
+		<meta name="keywords" content="wordle,word search,puzzle,word puzzle" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,6 +14,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
+		<title>Unscrabbled</title>
 
 		%sveltekit.head%
 	</head>
