chore: add missing PWA items

--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Unscrabbled, dictionary for word games" />
 		<meta name="keywords" content="wordle,word search,puzzle,word puzzle" />
+		<meta name="theme-color" content="rgb(17,24,39);" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
