--- a/src/app.html
+++ b/src/app.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
 	<head>
+		<!-- Meta tags -->
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="Unscrabbled, dictionary for word games" />
 		<meta name="keywords" content="wordle,word search,puzzle,word puzzle" />
-		<meta name="theme-color" content="rgb(17,24,39);" />
+		<meta name="theme-color" content="rgb(17,24,39)" />
 
+		<!-- Webfonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
+
+		<!-- Links -->
+		<link rel="shortcut icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+
 		<title>Unscrabbled</title>
 
 		%sveltekit.head%
