--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 		<!-- Links -->
 		<link rel="shortcut icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<link rel="manifest" href="%sveltekit.assets%/webmanifest.json" />
 
 		<title>Unscrabbled</title>
 
